<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/inicioAdmin"
            android:title="@string/InicioAdmin"
            android:icon="@drawable/uno_ico"/>

        <item
            android:id="@+id/perfilAdmin"
            android:title="@string/perfilAdmin"
            android:icon="@drawable/dos_ico"/>

        <item
            android:id="@+id/registrarAdmin"
            android:title="@string/registrarAdmin"
            android:icon="@drawable/tres_ico"/>

        <item
            android:id="@+id/listarAdmin"
            android:title="@string/listarAdmin"
            android:icon="@drawable/cuatro_ico"/>

        <item
            android:id="@+id/salir"
            android:title="@string/salir"
            android:icon="@drawable/cinco_ico"/>
    </group>

</menu>