<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#fff"
    tools:context=".fragmentos_admin.RegistroAdmin">

  <androidx.appcompat.widget.LinearLayoutCompat
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Registrotxt"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"
      android:textColor="#000"/>



    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">
      <TextView
          android:id="@+id/FechaRegistro"
          android:layout_width="wrap_content"
          android:textColor="#000000"
          android:layout_height="wrap_content"
          android:text="@string/FechaRegistro"/>

      <androidx.appcompat.widget.AppCompatImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="10dp"
          android:src="@drawable/calendar"/>

    </androidx.appcompat.widget.LinearLayoutCompat>



    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="100dp"
        android:layout_height="100dp"

        android:layout_gravity="center"
        android:src="@drawable/administrador"
        android:layout_marginTop="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

      <EditText
          android:id="@+id/Correo"
          android:hint="@string/Correo"
          android:inputType="textEmailAddress"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="#fff"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:passwordToggleEnabled="true">
      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPassword"
          android:id="@+id/Contraseña"
          android:hint="@string/Contraseña"
          android:background="#fff"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textCapWords|textAutoCorrect"
          android:id="@+id/Nombres"
          android:hint="@string/Nombres"
          android:background="#fff"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textCapWords|textAutoCorrect"
          android:id="@+id/Apellidos"
          android:hint="@string/Apellidos"
          android:background="#fff"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="number"
          android:id="@+id/Edad"
          android:hint="@string/Edad"
          android:background="#fff"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Registrar"
        android:id="@+id/Registrar"
        android:background="#FF5722"
        android:textColor="#fff"

        />




  </androidx.appcompat.widget.LinearLayoutCompat>



</ScrollView>