<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="CategoriasAdmin.PeliculasAdmin.AgregarPelicula">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:text="@string/NombretxtPeliculas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nombre Peliculas"
                android:id="@+id/NombresPeliculas"
                android:inputType="textCapWords|textAutoCorrect"
                android:layout_marginTop="10dp"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="25dp"
                    android:layout_height="30dp"
                    android:src="@drawable/vista_ico">


                </androidx.appcompat.widget.AppCompatImageView>

                <TextView
                    android:id="@+id/VistaPeliculas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginStart="10sp"
                    android:text="@string/VistaPelicula"/>


            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/image_ico"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/btnPublicar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/publicarPelicula"
                android:layout_marginTop="10dp"
                android:textColor="#fff"
                android:background="@drawable/btn_personalizado"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>